# options_wizard

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  test.py
cs/earnings/: strategy.py
cs/put_spread/: methods.py  strategy.py
docs/: TODO.md  about.md
notebooks/: .ipynb  buy_futures.ipynb  cal_spread.ipynb  cmdty_carry.ipynb  earnings_cal_spread.ipynb  earnings_cal_spread_insamp.ipynb  earnings_cal_spread_outsamp.ipynb  frd_webscrape.ipynb  idx_ladder_spread.ipynb  idx_put_spread.ipynb  individual.ipynb  individual_spread.ipynb  indiviual_analysis.ipynb  ipo.ipynb  new_ratio_spread.ipynb  put_selection.ipynb  put_spread.ipynb  put_spread_constituent.ipynb  put_spread_index.ipynb  ratio_spread.ipynb
scripts/: analyze_put_spread_case_studies.py  analyze_put_spread_results.py  analyze_two_short_two_long_results.py  compare_put_spread_rolls.py  fix_exch_code.py  index_spread_case_study.py  index_spread_exit_monte_carlo.py  multi_stock_spread_case_study.py  multi_stock_spread_exit_monte_carlo.py  plot_put_spread_equity_curves.py  run_put_spread_case_studies.py  run_put_spread_sweep.py  run_short_put_ladder.py  run_two_short_two_long_case_study.py  run_two_short_two_long_case_study_trailing.py  run_two_short_two_long_sweep.py
src/: universe.py
src/backtest/: __init__.py  coordinator.py  dates.py  diagnostics.py  position.py  trade.py
src/backtest/position/: base.py  (+5 more)
src/cs/: __init__.py  cal_spread.py  cmdty_carry.py  put_ladder_idx.py  put_spread.py  put_spread_idx.py  put_spread_idx_opt.py
src/data/: __init__.py  backtest.py  backtest_engine.py  base.py  contract.py  date.py  features.py  manager.py  strategy.py  trade.py  transform.py  utils.py
src/model/: __init__.py  base.py  gboost.py  linreg.py  logreg.py  mlp_reg.py
src/options_wizard/: __init__.py  universe.py
src/parallel/: types.py
src/position/: __init__.py  base.py
src/strat/: __init__.py  manager.py  types.py
(+23 files in other folders)
