[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "OptionsWizard"
version = "0.1"
description = "Options chain modelling an data analysis"
authors = [
  { name = "Cameron Aldren", email = "cameronaldren@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas==2.2.3",
  "numpy==2.2.1",
  "scikit-learn==1.7.2",
  "matplotlib==3.10.6",
  "python-dotenv==1.1.1",
  "yfinance==0.2.66",
  "scipy==1.16.2",
  "exchange_calendars==4.11.3"
]