[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["options_wizard*"]

[project]
name = "OptionsWizard"
version = "0.1"
description = "General strategy backtester (not just for options ;-)) "
authors = [
  { name = "Cameron Aldren", email = "cameronaldren@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas==2.2.3",
  "numpy==2.2.1",
  "scikit-learn==1.7.2",
  "matplotlib==3.10.6",
  "dill==0.4.1",
  "python-dotenv==1.1.1",
  "yfinance==0.2.66",
  "polars==1.35.2",
  "pyarrow==21.0.0",
  "lxml==5.3.0",
  "scipy==1.16.2",
  "tqdm==4.67.1",
  "exchange_calendars==4.11.3",
  "numba==0.61.2",
  "structlog==24.4.0"
]
